--- a/project2/index.html
+++ b/project2/index.html
@@ -12,20 +12,24 @@
 
 The intended audience includes local coffee lovers, remote workers looking for a cozy café to work from, students, and tourists exploring the area. It will also appeal to regulars who want to order ahead or join a loyalty program. </p>
 <h4>Key Feauture:</h4>
+
 <li>Dynamic menu with descriptions,imagbes and pricing</li>
 <li>Online ordering for pickup</li>
 <li>A location map with store hours and contact info</li>
 <li>Email newsletter sign-up</li>
 <li>Event Calendar for tastings, open mic nights, or speicials</li>
+
 <h2>Site Map</h2>
-<img src="./images/cafesitemap.png" width="800px" height="auto" alt="Cafe Site map">
+<img src="./images/cafesitemap.png" width="800" height="auto" alt="Cafe Site map">
 <h2>Homepage Wireframe</h2>
-<img src="./images/Wireframe.png" alt="">
+<img src="./images/Wireframe.png" width=800 height="auto" alt="website wireframe">
 <h2>Project Resources</h2>
-<ol><li>
+<ol>
+    <li>
 <a href="https://www.youtube.com/watch?v=cLOT0APQzDs&t=712s">Flower Shop Design</a>
 </li>
 <li><a href="https://www.youtube.com/watch?v=tRSMOMSqbF8&t=150s">Food Website Design</a></li>
+
 </ol>
 
 
