--- a/project3/html/music.html
+++ b/project3/html/music.html
@@ -27,7 +27,7 @@ b. Each album must include information about each album (album cover, album name
     <div class="hover-info">
       <p><strong>A Night at the Opera</strong><br>Released: 1975 <br>
         Tracks: Bohemian Rhapsody, You're My Best Friend <br>
-        <a href="https://en.wikipedia.org/wiki/A_Night_at_the_Opera_(Queen_album)" target="_blank"">Source:Wikipedia</a>
+        <a href="https://en.wikipedia.org/wiki/A_Night_at_the_Opera_(Queen_album)" target="_blank">Source:Wikipedia</a>
     </p>
     </div>
   </div>
